compiler/testData/cli/jvm/_diagnosticTests/firSyntaxError.out
compiler/testData/cli/jvm/_diagnosticTests/firSyntaxError.kt:1:10: error: syntax error: Expecting '}'.
fun a() {
         ^
COMPILATION_ERROR
